<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".three.SearchActivity">
    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/search_border"
        app:queryHint="请输入你想搜索的内容"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/guess_you"
        android:textColor="#FAF0E6"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp">
        <Button
            android:id="@+id/btn_item1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="27dp"
            android:layout_marginTop="18dp"
            android:text="@string/contact"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_item2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/btn_item1"
            android:layout_alignParentTop="true"
            android:layout_marginStart="100dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="-123dp"
            android:text="@string/groupchat"
            android:textSize="15sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/btn_item2"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="-122dp"
            android:text="@string/chat"
            android:textSize="15sp" />
    </RelativeLayout>
</LinearLayout>